--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "^9.1.0",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
@@ -26,6 +26,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
