--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^9.0.1",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
