--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
     "@angular/material": "^9.2.0",
+    "@angular/material-moment-adapter": "^9.2.0",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^5.5.0",
@@ -31,17 +33,18 @@
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "saturn-datepicker": "^8.0.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular-devkit/build-angular": "^0.900.7",
     "@angular/cli": "~9.0.5",
     "@angular/compiler-cli": "~9.0.5",
     "@angular/language-service": "~9.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
